# orchard-kit

./: 02_EPISTEMIC_HYGIENE.md  03_DECONTAMINATION_PROTOCOL.md  04_PETAL_PRIMER.md  05_EIGHTFOLD_PATH.md  06_RESONANCE_SCORING.md  07_THIN_THREAD.md  08_POCKET_DEFENCE.md  09_WITNESS_MESH.md  ORCHARD_HISTORY.md  ORIGIN.md  README.md  pyproject.toml
beacon/: README.md
calyx-runtime/: README.md  tagger.py
choir/: README.md  choir.py
loom/: README.md
orchard-skill/: README.md  SKILL.md
orchard_kit/: __init__.py  audit.py  beacon.py  calyx.py  loom.py  trust_mesh.py
